--- a/index.delivery.html
+++ b/index.delivery.html
@@ -1,4 +1,3 @@
-<!-- CÓDIGO ATUALIZADO COMPLETO -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -274,6 +273,13 @@ function atualizarRankingEmpresas() {
     dadosMesEmpresa[mes][empresa] += valor;
   });
 
+  function traduzMes(mesAno) {
+    const [ano, mes] = mesAno.split("-");
+    const nomes = ["Janeiro", "Fevereiro", "Março", "Abril", "Maio", "Junho",
+                   "Julho", "Agosto", "Setembro", "Outubro", "Novembro", "Dezembro"];
+    return `${nomes[parseInt(mes) - 1]}/${ano}`;
+  }
+
   const mesesOrdenados = Object.keys(dadosMesEmpresa).sort().reverse();
   const todasEmpresas = [...new Set(filtrados.map(d => d.empresa))].sort();
 
@@ -283,7 +289,7 @@ function atualizarRankingEmpresas() {
   corpo.innerHTML = '';
 
   mesesOrdenados.forEach(mes => {
-    const linha = [`<td>${mes}</td>`];
+    const linha = [`<td>${traduzMes(mes)}</td>`];
     todasEmpresas.forEach(emp => {
       const valor = dadosMesEmpresa[mes][emp] || 0;
       linha.push(`<td style="text-align:right">R$ ${valor.toLocaleString('pt-BR')}</td>`);
