--- a/index.delivery.html
+++ b/index.delivery.html
@@ -3,71 +3,122 @@
 <head>
   <meta charset="UTF-8" />
   <title>Vendas Delivery - Grupo DV</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; background: white; margin: 0; padding: 0; }
+    body {
+      font-family: Arial, sans-serif;
+      background: white;
+      margin: 0;
+      padding: 0;
+      font-size: 14px;
+    }
     header {
       background-color: white;
-      padding: 10px 20px;
+      padding: 10px;
       display: flex;
       align-items: center;
       border-bottom: 1px solid #ccc;
+      flex-wrap: wrap;
     }
-    header img { height: 50px; margin-right: 20px; }
-    header h1 { margin: 0 auto; font-size: 1.6em; font-weight: bold; text-align: center; flex: 1; }
-    .container { padding: 20px; }
+    header img {
+      height: 40px;
+      margin-right: 10px;
+      flex-shrink: 0;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 1.2em;
+      font-weight: bold;
+      flex: 1;
+      text-align: center;
+    }
+    .container {
+      padding: 10px;
+    }
     .chart-box, .total-box, .resumo-box {
       background: white;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.05);
-      padding: 20px;
+      padding: 15px;
+      margin-bottom: 15px;
+    }
+    .chart-box canvas {
+      max-width: 100%;
+      height: auto;
+    }
+    .total-line {
+      display: flex;
+      justify-content: space-between;
+      padding: 5px 0;
+      font-size: 1em;
+    }
+    .filters {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
       margin-bottom: 20px;
     }
-    .chart-box canvas { max-width: 100%; height: 300px; }
-    .total-line { display: flex; justify-content: space-between; padding: 5px 0; font-size: 1.1em; }
-    .total-line strong { font-weight: bold; }
-    .filters {
-      display: flex; flex-wrap: wrap; gap: 10px; margin-bottom: 20px; align-items: end;
+    .filters > div {
+      flex: 1 1 45%;
     }
-    .filters label { font-weight: bold; }
+    .filters label {
+      font-weight: bold;
+      display: block;
+      margin-bottom: 5px;
+    }
     .filters select {
-      padding: 10px;
+      width: 100%;
+      padding: 8px;
       border-radius: 8px;
       border: 1px solid #ccc;
-      width: 100%;
+      font-size: 14px;
     }
-    .filters > div { flex: 1 1 200px; }
     .resumo-linha {
       background: white;
-      padding: 15px 20px;
-      border-radius: 16px;
-      margin-bottom: 16px;
-      line-height: 1.6;
+      padding: 10px;
+      border-radius: 10px;
+      margin-bottom: 10px;
+      line-height: 1.4;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
       border: 1px solid #eee;
     }
-    .resumo-linha strong { display: block; font-size: 1.1em; margin-bottom: 4px; }
+    .resumo-linha strong {
+      display: block;
+      font-size: 1em;
+      margin-bottom: 4px;
+    }
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 10px;
+      font-size: 13px;
     }
     th, td {
-      padding: 8px;
+      padding: 6px;
       text-align: left;
       border-bottom: 1px solid #eee;
     }
     .btn-whatsapp {
       background-color: #25D366;
       color: white;
-      padding: 10px 20px;
+      padding: 10px;
       border-radius: 8px;
       border: none;
       font-weight: bold;
       cursor: pointer;
-      float: right;
-      margin-bottom: 10px;
+      width: 100%;
+      margin-bottom: 15px;
+    }
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 1em;
+      }
+      .filters > div {
+        flex: 1 1 100%;
+      }
+      .btn-whatsapp {
+        font-size: 14px;
+      }
     }
   </style>
 </head>
@@ -75,7 +126,7 @@
 
 <header>
   <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
-  <h1>Vendas Delivery - Grupo DV</h1>
+  <h1>Vendas Delivery</h1>
 </header>
 
 <div class="container">
