--- a/index.delivery.html
+++ b/index.delivery.html
@@ -123,6 +123,13 @@
   </style>
 </head>
 <body>
+  <header>
+    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
+    <h1>Vendas Delivery - Grupo DV</h1>
+  </header>
+  <div class="container">
+</head>
+<body>
 
 <header>
   <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
