--- a/index.delivery.html
+++ b/index.delivery.html
@@ -129,7 +129,7 @@
 
   <header>
     <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
-    <h1>Vendas Delivery - Grupo DV</h1>
+    <h1>Vendas Delivery</h1>
   </header>
 
   <div class="container">
