--- a/index.delivery.html
+++ b/index.delivery.html
@@ -112,6 +112,9 @@
       width: 100%;
       margin-bottom: 20px;
     }
+    .ranking-table {
+      font-size: 0.85em;
+    }
     @media (max-width: 600px) {
       header h1 {
         font-size: 1.3em;
@@ -200,7 +203,7 @@
 
     <div class="total-box">
       <h3>🏆 Ranking de Empresas</h3>
-      <table>
+      <table class="ranking-table">
         <thead></thead>
         <tbody id="tabela-ranking"></tbody>
       </table>
