--- a/index.conciliacao.html
+++ b/index.conciliacao.html
@@ -11,6 +11,7 @@
       background: white;
       margin: 0;
       padding: 0;
+      font-size: 14px;
     }
     header {
       background-color: white;
@@ -42,12 +43,14 @@
     }
     .filters label {
       font-weight: bold;
+      font-size: 0.95em;
     }
     .filters select, .filters input[type="date"] {
       padding: 10px;
       border-radius: 8px;
       border: 1px solid #ccc;
       width: 100%;
+      font-size: 0.95em;
     }
     .filters > div {
       flex: 1 1 200px;
@@ -55,11 +58,12 @@
     .btn-whatsapp {
       background-color: #25D366;
       color: white;
-      padding: 10px 20px;
+      padding: 12px 20px;
       border-radius: 8px;
       border: none;
       font-weight: bold;
       cursor: pointer;
+      font-size: 0.95em;
       margin-top: 10px;
     }
     canvas {
