--- a/index.resumofinanceiro.html
+++ b/index.resumofinanceiro.html
@@ -12,16 +12,17 @@
       background: #f7f7f7;
       margin: 0;
       padding: 0;
+      font-size: 14px;
     }
     header {
       background-color: white;
-      padding: 10px 20px;
+      padding: 20px;
       display: flex;
       align-items: center;
       border-bottom: 1px solid #ccc;
     }
     header img {
-      height: 50px;
+      height: 60px;
       margin-right: 20px;
     }
     header h1 {
@@ -45,6 +46,7 @@
     }
     .filtros label {
       font-weight: bold;
+      font-size: 0.95em;
     }
     .filtros input,
     .filtros select {
@@ -52,6 +54,7 @@
       border-radius: 8px;
       border: 1px solid #ccc;
       width: 100%;
+      font-size: 0.95em;
     }
     .filtros > div {
       flex: 1 1 200px;
@@ -64,6 +67,7 @@
       color: white;
       font-weight: bold;
       cursor: pointer;
+      font-size: 0.95em;
     }
     .empresa-box {
       background: white;
@@ -71,6 +75,7 @@
       padding: 15px;
       margin-bottom: 20px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+      font-size: 0.95em;
     }
     .empresa-box h2 {
       margin: 0 0 10px;
@@ -81,7 +86,6 @@
       list-style: none;
       padding-left: 0;
       margin: 0;
-      font-size: 0.95em;
     }
     .empresa-box li {
       margin-bottom: 4px;
@@ -112,7 +116,6 @@
   </style>
 </head>
 <body>
-
 <header>
   <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
   <h1>Entradas</h1>
