--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -1,3 +1,4 @@
+<!-- INÍCIO DO CÓDIGO HTML -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -154,6 +155,7 @@
     📊 Total Cancelado: <span id="totalCancelado"><strong>R$ 0,00</strong></span>
   </div>
 
+  <div id="infoPeriodo" class="dados-analisados"></div>
   <canvas id="graficoCancelamentos"></canvas>
   <div id="listaCancelamentos"></div>
   <div class="dados-analisados" id="resumoDados"></div>
@@ -202,11 +204,13 @@
     const dataInicio = document.getElementById('dataInicio').value;
     const dataFim = document.getElementById('dataFim').value;
 
-    const tituloPainel = document.getElementById("tituloPainel");
+    document.getElementById("tituloPainel").innerText = "Cancelamentos";
+
+    const infoPeriodo = document.getElementById("infoPeriodo");
     if (dataInicio && dataFim) {
-      tituloPainel.innerText = `Cancelamentos (${formatarDataBR(dataInicio)} a ${formatarDataBR(dataFim)})`;
+      infoPeriodo.innerText = `📅 Período: ${formatarDataBR(dataInicio)} a ${formatarDataBR(dataFim)}`;
     } else {
-      tituloPainel.innerText = "Cancelamentos";
+      infoPeriodo.innerText = "";
     }
 
     const lista = document.getElementById("listaCancelamentos");
@@ -265,7 +269,9 @@
     });
 
     document.getElementById("totalCancelado").innerHTML = `<strong>${formatarMoeda(totalGeral)}</strong>`;
-    document.getElementById("resumoDados").innerText = `Dados analisados: ${registrosContados} registros`;
+
+    document.getElementById("resumoDados").innerText =
+      `🔍 Dados analisados: ${registrosContados} item${registrosContados !== 1 ? 's' : ''} encontrado${registrosContados !== 1 ? 's' : ''} após os filtros aplicados.`;
 
     const canvas = document.getElementById("graficoCancelamentos");
 
@@ -376,3 +382,4 @@
 
 </body>
 </html>
+<!-- FIM DO CÓDIGO HTML -->
